CalibreDb: Add authors lookup
